Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -47,11 +47,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "01_insert_cats_into_cats_table.sql  enter-name.png    README.md\r\n",
+      "click-new.png\t\t\t    index.ipynb       rename-file.png\r\n",
+      "click-text.png\t\t\t    LICENSE.md\r\n",
+      "CONTRIBUTING.md\t\t\t    pets_database.db\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "# !ls\n",
+    "# !rm 01_insert_cats_into_cats_table.sql"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# connect database and create cursor here"
+    "# connect database and create cursor here\n",
+    "import sqlite3\n",
+    "connection = sqlite3.connect('pets_database.db')\n",
+    "cursor = connection.cursor()"
    ]
   },
   {
@@ -75,11 +99,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "OperationalError",
+     "evalue": "table cats already exists",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-8ba00eb4888a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mname\u001b[0m \u001b[0mTEXT\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mage\u001b[0m \u001b[0mINTEGER\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     breed TEXT)''')\n\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m: table cats already exists"
+     ]
+    }
+   ],
    "source": [
-    "# create table here"
+    "# create table here\n",
+    "cursor.execute('''\n",
+    "CREATE TABLE cats (\n",
+    "    id INTEGER PRIMARY KEY,\n",
+    "    name TEXT,\n",
+    "    age INTEGER,\n",
+    "    breed TEXT)''')"
    ]
   },
   {
@@ -87,6 +129,23 @@
    "metadata": {},
    "source": [
     "Okay, let's start storing some cats."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/scrappy-prompt-3317/dsc-1-05-05-selecting-data-seattle-ds-career-040119\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pwd\n"
    ]
   },
   {
@@ -104,11 +163,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# insert Maru into the pet_database.db here"
+    "# insert Maru into the pet_database.db here\n",
+    "cursor.execute('''INSERT INTO cats (name, age, breed) VALUES ('Maru', 3, 'Scottish Fold');''')"
    ]
   },
   {
@@ -170,11 +230,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/scrappy-prompt-3317/dsc-1-05-05-selecting-data-seattle-ds-career-040119\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pwd\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "01_insert_cats_into_cats_table.sql  enter-name.png    README.md\n",
+      "click-new.png\t\t\t    index.ipynb       rename-file.png\n",
+      "click-text.png\t\t\t    LICENSE.md\n",
+      "CONTRIBUTING.md\t\t\t    pets_database.db\n",
+      "/home/scrappy-prompt-3317/dsc-1-05-05-selecting-data-seattle-ds-career-040119\n"
+     ]
+    }
+   ],
+   "source": [
+    "# !touch 01_insert_cats_into_cats_table.sql\n",
+    "!ls\n",
+    "!pwd\n",
+    "# / 01_insert_cats_into_cats_table.sql"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f7f6d9eb260>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#insert x 2\n",
+    "cursor.execute('''INSERT INTO cats (name, age, breed) VALUES (\"Lil\\' Bub\", 5, 'American Shorthair');''')\n",
+    "cursor.execute('''INSERT INTO cats (name, age, breed) VALUES (\"Hannah\", 1, 'Tabby');''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# execute the INSERT INTO statements here"
+    "#  Skipped this and just did in jupyter above\n",
+    "# execute the INSERT INTO statements here\n",
+    "# file = open('./01_insert_cats_into_table.sql', 'r')\n",
+    "# sql = file.read()\n",
+    "# cursor.executescript(sql)\n",
+    "# file.close()"
    ]
   },
   {
@@ -258,11 +388,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'Maru', 3, 'Scottish Fold'),\n",
+       " (2, \"Lil' Bub\", 5, 'American Shorthair'),\n",
+       " (3, 'Hannah', 1, 'Tabby')]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# select cats from database here"
+    "# select cats from database here\n",
+    "cursor.execute('''SELECT id, name, age, breed FROM cats;''').fetchall()"
    ]
   },
   {
@@ -298,11 +442,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(3, 'Hannah', 1, 'Tabby')]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# select using WHERE clause here"
+    "# select using WHERE clause here\n",
+    "cursor.execute('''SELECT * FROM cats WHERE age < 2;''').fetchall()"
    ]
   },
   {
@@ -346,11 +502,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f7f6d9eb260>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# update hannah here"
+    "# update hannah here\n",
+    "cursor.execute('''UPDATE cats SET name = \"Hana\" WHERE name = \"Hannah\";''')"
    ]
   },
   {
@@ -378,11 +546,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f7f6d9eb260>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# DELETE record with id=2 here"
+    "# DELETE record with id=2 here\n",
+    "cursor.execute('''DELETE FROM cats WHERE id = 2;''')"
    ]
   },
   {
@@ -392,6 +572,26 @@
     "Notice that this time we selected the row to delete using the Primary Key column. Remember that every table row has a Primary Key column that is unique. Lil' Bub was the second row in the database and thus had an id of `2`.\n",
     "\n",
     "<p data-visibility='hidden'>View <a href='https://learn.co/lessons/sql-insert-select-update-code-along' title='Inserting, Selecting, Updating, and Deleting Database Rows'>Inserting, Selecting, Updating, and Deleting Database Rows</a> on Learn.co and start learning to code for free.</p>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'Maru', 3, 'Scottish Fold'), (3, 'Hana', 1, 'Tabby')]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursor.execute('''SELECT * FROM cats''').fetchall()"
    ]
   },
   {
